Addresses a bunch of weird layout issues (resizing + drag'n'drop)

--- a/public/css/chartled.css
+++ b/public/css/chartled.css
@@ -12,6 +12,17 @@
   display:table;
 }
 
+.chartled .chart {
+  line-height: 0;
+}
+.chartled .chart svg {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
 .chartled .dateandtime {
   white-space: nowrap;
   display:table-cell; 
